modified location to work the way it's supposed to